--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -37,5 +37,12 @@
     <string name="mix_commands">Μπορείτε να συνδυάσετε εντολές από διαφορετικές γλώσσες</string>
     <string name="putSummonerName">Βάλτε το όνομα του Summoner σας</string>
     <string name="region">Περιοχή:</string>
+    <string name="explanation_rune">Η ενεργοποίηση πραγματοποιείται κάνοντας κλικ ή χρησιμοποιώντας τη λέξη Rune, μαζί με τη λωρίδα , για παράδειγμα: </string>
+    <string name="rune">Ρούνας</string>
+    <string name="goOffline">Έναρξη εκτός σύνδεσης</string>
+    <string name="error_conection">Σφάλμα σύνδεσης</string>
+    <string name="change">Αλλαγή</string>
+    <string name="change_summoner_name">Αλλαγή ονόματος Summoner</string>
+    <string name="with_rune">Με τον ρούνο:</string>
 
 </resources>
