--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -37,5 +37,11 @@
     <string name="mix_commands">Puedes mezclar comandos de diferentes idiomas</string>
     <string name="putSummonerName">Pon tu nombre de invocador</string>
     <string name="region">Región:</string>
-
+    <string name="explanation_rune">La activación se realiza haciendo clic o usando la palabra Rune, junto con lane, por ejemplo: </string>
+    <string name="rune">Runa</string>
+    <string name="goOffline">Comenzar sin conexión</string>
+    <string name="error_conection">Error de conexión</string>
+    <string name="change">Cambiar</string>
+    <string name="change_summoner_name">Cambiar nombre de invocador</string>
+    <string name="with_rune">Con la runa:</string>
 </resources>
