--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -37,5 +37,12 @@
     <string name="mix_commands">Puteți combina comenzi din diferite limbi</string>
     <string name="putSummonerName">Puneți numele invocatorului dvs.</string>
     <string name="region">Regiune:</string>
+    <string name="explanation_rune">Activarea se face făcând clic sau folosind cuvântul Rune, împreună cu banda , de exemplu: </string>
+    <string name="rune">Runa</string>
+    <string name="goOffline">Începe offline</string>
+    <string name="error_conection">Eroare de conectare</string>
+    <string name="change">Modificare</string>
+    <string name="change_summoner_name">Schimbați numele invocatorului</string>
+    <string name="with_rune">Cu runa:</string>
 
 </resources>
